--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .carousel,
@@ -37,13 +38,9 @@ body {
 /* Background images are set within the HTML using inline CSS, not here */
 
 .fill {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+  width: 100%;
+  height: 100%;
+  background-position: center;
 }
 
 footer {
@@ -53,4 +50,45 @@ footer {
 .navbar {
   height:70px;
   background-color: #2C3E50;
+}
+
+.bounce {
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%, 15%, 50%, 80%, 100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-15px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+}
+
+@-moz-keyframes bounce {
+  0%, 15%, 50%, 80%, 50% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-15px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+}
+
+@keyframes bounce {
+  0%, 15%, 50%, 80%, 50% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-15px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
 }
