--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,15 @@ footer {
   padding-bottom: 10px;
 }
 
+#results-header {
+  text-align: center;
+}
+
+.section-description {
+  margin-top: 90px;
+  margin-left: 60px;
+}
+
 .bounce {
   -webkit-animation: bounce 2s infinite;
   animation: bounce 2s infinite;
